tests/ui/recursion/infinite-instantiation-via-nested-closures.stderr
error: reached the recursion limit while instantiating `A::matches::<{closure@$DIR/infinite-instantiation-via-nested-closures.rs:40:23: 40:25}>`
  --> $DIR/infinite-instantiation-via-nested-closures.rs:50:9
   |
LL |         a.matches(f)
   |         ^^^^^^^^^^^^
   |
note: `A::matches` defined here
  --> $DIR/infinite-instantiation-via-nested-closures.rs:13:5
   |
LL |     pub fn matches<F: Fn()>(&self, f: &F) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

